src/app/components/common-ui/Dropdown/_style.scss
$ar-dropdown-shadow: 0 0 5px 0 rgba($color-grey, 0.5) !default;
$ar-dropdown-inner-shadow: inset 0 0 1px 1px rgba($color-blue, 0.125) !default;
$ar-dropdown-menu-color: $color-white !default;
$ar-dropdown-item-color: $color-gray-dark !default;
$ar-dropdown-item-hover: $color-white !default;
$ar-dropdown-item-hover-bg: $color-blue !default;
$ar-dropdown-item-active: $color-gray-dark !default;
$ar-dropdown-item-active-bg: $color-grey-light !default;
$ar-dropdown-border-radius: 4px !default;
$ar-dropdown-border-color: $color-grey-light !default;

.ar-dropdown {
    position: relative;
    display: inline-flex;
    flex-direction: column;

    > * {
        z-index: 10;
    }

    &-menu {
        z-index: 1;
        position: absolute;
        width: 100%;
        bottom: 0;
        right: 0;
        transform: translateY(100%);
        display: none;
        overflow: hidden;
        box-shadow: $ar-dropdown-shadow;
        border-radius: 0px 0px $ar-dropdown-border-radius
            $ar-dropdown-border-radius;
        height: 0;

        &.expanded {
            display: block;
            height: auto;
            overflow: auto;
        }

        ul,
        ul li {
            min-width: 100%;
            list-style: none;
            padding: 0;
            margin: 0;
        }

        ul li {
            &:last-child {
                button {
                    border-radius: 0px 0px $ar-dropdown-border-radius
                        $ar-dropdown-border-radius;
                }
            }

            &.ranked {
                border-bottom: 1px solid $ar-dropdown-border-color;
            }

            &.active {
                .checkbox {
                    > svg {
                        opacity: 1;
                    }
                }

                color: $ar-dropdown-item-active;

                > span,
                a,
                button {
                    z-index: 2;
                    color: $ar-dropdown-item-active;
                }
            }

            > span,
            a,
            button {
                z-index: 1;
                display: flex;
                justify-content: flex-start;
                align-items: center;
                flex-direction: row;
                min-height: 42px;
                width: 100%;
                padding: 12px 10px;
                margin: 0;
                border: none;
                text-decoration: none;
                text-align: left;
                font-size: 12px;
                line-height: 1;
                color: $ar-dropdown-item-color;
                background-color: $ar-dropdown-menu-color;
                transition: background-color 0.25s ease-in-out,
                    color 0.25s ease-in-out;

                * {
                    pointer-events: none;
                }

                svg {
                    fill: currentColor;
                    transition: fill 0.25s ease-in-out;
                }

                .checkbox {
                    display: flex;
                    justify-content: center;
                    align-items: center;
                    width: $ar-checkbox-size;
                    height: $ar-checkbox-size;
                    overflow: hidden;
                    border: 2px solid $ar-checkbox-border-color;
                    border-radius: 2px;
                    color: $ar-checkbox-bg-active-color;
                    margin-right: 12px;

                    > svg {
                        opacity: 0;
                        fill: currentColor;
                        width: $ar-checkbox-size;
                        height: $ar-checkbox-size;
                        transition: none;
                    }
                }

                &:focus {
                    color: $ar-dropdown-item-hover;
                    background-color: $ar-dropdown-item-hover-bg;

                    .checkbox {
                        border-color: currentColor;
                        color: currentColor;
                    }
                }

                &:hover {
                    z-index: 3;
                    color: $ar-dropdown-item-hover;
                    background-color: darken($ar-dropdown-item-hover-bg, 2%);

                    .checkbox {
                        border-color: currentColor;
                        color: currentColor;
                    }
                }
            }
        }
    }
}

